Expose the RE for halocarbons

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -162,6 +162,40 @@ export(RF_SO2I)
 export(RF_TOTAL)
 export(RF_T_ALBEDO)
 export(RF_VOL)
+export(RHO_BC)
+export(RHO_C2F6)
+export(RHO_CCL4)
+export(RHO_CF4)
+export(RHO_CFC11)
+export(RHO_CFC113)
+export(RHO_CFC114)
+export(RHO_CFC115)
+export(RHO_CFC12)
+export(RHO_CH3BR)
+export(RHO_CH3CCL3)
+export(RHO_CH3CL)
+export(RHO_CH4)
+export(RHO_CO2)
+export(RHO_HALON1211)
+export(RHO_HALON1301)
+export(RHO_HALON2402)
+export(RHO_HCFC141B)
+export(RHO_HCFC142B)
+export(RHO_HCFC22)
+export(RHO_HFC125)
+export(RHO_HFC134A)
+export(RHO_HFC143A)
+export(RHO_HFC227EA)
+export(RHO_HFC23)
+export(RHO_HFC245FA)
+export(RHO_HFC32)
+export(RHO_HFC4310)
+export(RHO_N2O)
+export(RHO_OC)
+export(RHO_SF6)
+export(RHO_SO2d)
+export(RHO_SO2i)
+export(RHO_tropO3)
 export(SETDATA)
 export(SF6_CONSTRAIN)
 export(SOIL_C)
@@ -187,14 +221,6 @@ export(isactive)
 export(newcore)
 export(rename_biome)
 export(reset)
-export(rho_BC)
-export(rho_CH4)
-export(rho_CO2)
-export(rho_N2O)
-export(rho_OC)
-export(rho_SO2d)
-export(rho_SO2i)
-export(rho_tropO3)
 export(run)
 export(runscenario)
 export(sendmessage)
