--- a/inst/input/hector_test.ini
+++ b/inst/input/hector_test.ini
@@ -1,8 +1,7 @@
-; Config file for hector model: that uses RCP85 concentrations to drive Hector. 
-; Emission driven Hector runs capture the carbon cycle whereas concentration runs do not.
+; Config file for hector model: RCP45
 ;------------------------------------------------------------------------
 [core]
-run_name=rcp85_co2constrain
+run_name=rcp45
 startDate=1745
 endDate=2300
 do_spinup=1			; if 1, spin up model before running (default=1)
@@ -57,14 +56,14 @@ f_lucv=0.1			; Fraction of land use change flux from vegetation
 f_lucd=0.01			; Fraction of land use change flux from detritus (balance from soil)
 
 ; Anthropogenic contributions: direct emissions and land use change, Pg C/yr
-ffi_emissions=csv:emissions/RCP85_emissions.csv
-luc_emissions=csv:emissions/RCP85_emissions.csv 
+ffi_emissions=csv:emissions/RCP45_emissions.csv
+luc_emissions=csv:emissions/RCP45_emissions.csv 
 
 ; Optional atmospheric CO2 constraint, ppmv
 ; If supplied, the model will use these data, ignoring what it calculates
 ; Any residual between model [CO2] and model [CO2] will be put into the deep ocean
 ;CO2_constrain=csv:constraints/lawdome_co2.csv		; Law Dome CO2 record
-CO2_constrain=csv:constraints/rcp85_co2ppm.csv	; MAGICC output
+;CO2_constrain=csv:constraints/RCP45_co2ppm.csv	; MAGICC output
 
 ; CO2 and temperature effects on the carbon cycle
 ; these are global values, can optionally specify biome-specific ones as above
@@ -73,7 +72,7 @@ q10_rh=2.0		; respiration response Q10, unitless
 
 ; Optional biome-specific warming factors
 ; by default, assume 1.0 (i.e., warms as fast as the globe)
-;boreal.warming=1.2	; i.e., biome will warm 1.2 C for every 1 C globally
+;boreal.warmingfactor=1.2	; i.e., biome will warm 1.2 C for every 1 C globally
 
 ; Albedo effect, in W/m2. The model assumes a constant value if nothing specified
 Ftalbedo[1750]=0.0
@@ -90,7 +89,7 @@ eps_spinup=0.001	; spinup tolerance (drift), Pg C
 [so2] 
 S0=53841.2 			; historical sulphate from year 2000 (Gg)
 SN=42000			; natural sulfur emissions (Gg)
-SO2_emissions=csv:emissions/RCP85_emissions.csv 	; emissions time series
+SO2_emissions=csv:emissions/RCP45_emissions.csv 	; emissions time series
 SV=csv:emissions/volcanic_RF.csv   			  	; emissions time series
 
 ;------------------------------------------------------------------------
@@ -100,13 +99,13 @@ Tsoil=160 			; CH4 loss to soil (years)
 Tstrat=120          ; CH4 loss to stratosphere (years)
 UC_CH4=2.78			; Tg(CH4)/ppb unit conversion between emissions and concentrations
 CH4N=300			; Natural CH4 emissions (Tgrams)
-CH4_emissions=csv:emissions/RCP85_emissions.csv     ; emissions time series
+CH4_emissions=csv:emissions/RCP45_emissions.csv     ; emissions time series
 
 ;------------------------------------------------------------------------
 [OH]
-NOX_emissions=csv:emissions/RCP85_emissions.csv     ; emissions time series
-CO_emissions=csv:emissions/RCP85_emissions.csv      ; emissions time series
-NMVOC_emissions=csv:emissions/RCP85_emissions.csv   ; emissions time series
+NOX_emissions=csv:emissions/RCP45_emissions.csv     ; emissions time series
+CO_emissions=csv:emissions/RCP45_emissions.csv      ; emissions time series
+NMVOC_emissions=csv:emissions/RCP45_emissions.csv   ; emissions time series
 
 TOH0=6.6			; inital OH lifetime (years)
 CNOX=0.0042			; coefficent for NOX
@@ -117,9 +116,9 @@ CCH4=-0.32			; coefficent for CH4
 ;------------------------------------------------------------------------
 [ozone]
 PO3=30.0 				; preindustrial O3 concentration
-NOX_emissions=csv:emissions/RCP85_emissions.csv  	; emissions time series
-CO_emissions=csv:emissions/RCP85_emissions.csv	; emissions time series
-NMVOC_emissions=csv:emissions/RCP85_emissions.csv ; emissions time series
+NOX_emissions=csv:emissions/RCP45_emissions.csv  	; emissions time series
+CO_emissions=csv:emissions/RCP45_emissions.csv	; emissions time series
+NMVOC_emissions=csv:emissions/RCP45_emissions.csv ; emissions time series
 ;molarMass=16.04    ; grams
 ;tau=10				; lifetime in years  (Oucher et al 2009)
 
@@ -135,7 +134,7 @@ N2O_natural_emissions[1765]=11  ; natural emissions in 1765, TgN
 N2O_natural_emissions[2000]=8   ; natural emissions in 2000, TgN
 N2O_natural_emissions[2300]=8   ; natural emissions in 2300, TgN
 
-N2O_emissions=csv:emissions/RCP85_emissions.csv   ; emissions time series
+N2O_emissions=csv:emissions/RCP45_emissions.csv   ; emissions time series
 ;molarMass=44.01     ; grams
 
 ;------------------------------------------------------------------------
@@ -144,7 +143,7 @@ baseyear=1750		; when to start reporting; by definition, all F=0 in this year
 
 ; Optional radiative forcing constraint
 ; If supplied, the model will use these data, ignoring what it calculates
-;Ftot_constrain=csv:constraints/MAGICC_RF_8.5.csv
+;Foot_Constrain=csv:constraints/MAGICC_RF_4.5.csv
 rho_CO2=5.35		; forcing efficiency for CO2, W/m2
 rho_N2O=0.12		; forcing efficiency for N2O, W/m2
 rho_CH4=0.036		; forcing efficiency for N2O, W/m2
@@ -153,6 +152,7 @@ rho_SO2d=-0.35	; forcing efficiency for direct effects SO2, W/m2
 rho_SO2i=-0.6	; forcing efficiency for indirect effects SO2, W/m2
 rho_BC=0.0743   ; 
 rho_OC=-0.0128  ; 
+
 
 ;------------------------------------------------------------------------
 [temperature]
@@ -168,11 +168,11 @@ volscl=1.0    ; scaling factor for volcanic forcing
 
 ;------------------------------------------------------------------------
 [bc]
-BC_emissions=csv:emissions/RCP85_emissions.csv
+BC_emissions=csv:emissions/RCP45_emissions.csv
 
 ;------------------------------------------------------------------------
 [oc]
-OC_emissions=csv:emissions/RCP85_emissions.csv
+OC_emissions=csv:emissions/RCP45_emissions.csv
 
 ;------------------------------------------------------------------------
 ; Halocarbons
