--- a/inst/input/hector_rcp26_histconstrain.ini
+++ b/inst/input/hector_rcp26_histconstrain.ini
@@ -182,147 +182,147 @@ OC_emissions=csv:emissions/RCP26_emissions.csv
 
 [CF4_halocarbon]
 tau=50000.0 		; lifetime in years
-rho=0.00008 		; radiative efficiencies W/m2/ppt
+rho_CF4=0.00008 		; radiative efficiencies W/m2/ppt
 H0=35.0,pptv		; preindustrial concentration, pptv
-CF4_emissions=csv:emissions/RCP26_emissions.csv
+CF4_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=88.0043	; grams
 
 [C2F6_halocarbon]
 tau=10000.0
-rho=0.00026
-C2F6_emissions=csv:emissions/RCP26_emissions.csv
+rho_C2F6=0.00026
+C2F6_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=138.01
 
 ;[C4F10_halocarbon]
 ;tau=2600.0
-;rho=0.00033
-;C4F10_emissions=csv:emissions/RCP26_emissions.csv
+;rho_C4F10=0.00033
+;C4F10_emissions=csv:emissions/RCP45_emissions.csv
 ;molarMass=238.0
 
 [HFC23_halocarbon]
 tau=270.0
-rho=0.00019 
-HFC23_emissions=csv:emissions/RCP26_emissions.csv
+rho_HFC23=0.00019 
+HFC23_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=70.0
 
 [HFC32_halocarbon]
 tau=4.9
-rho=0.00011 
-HFC32_emissions=csv:emissions/RCP26_emissions.csv
+rho_HFC32=0.00011 
+HFC32_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=52.0
 
 [HFC4310_halocarbon]
 tau=15.9
-rho=0.0004 
-HFC4310_emissions=csv:emissions/RCP26_emissions.csv
+rho_HFC4310=0.0004 
+HFC4310_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=252.0
 
 [HFC125_halocarbon]
 tau=29.0
-rho=0.00023 
-HFC125_emissions=csv:emissions/RCP26_emissions.csv
+rho_HFC125=0.00023 
+HFC125_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=120.02
 
 [HFC134a_halocarbon]
 tau=14.0
-rho=0.00016
-HFC134a_emissions=csv:emissions/RCP26_emissions.csv
+rho_HFC134a=0.00016
+HFC134a_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=102.02
 
 [HFC143a_halocarbon]
 tau=52.0
-rho=0.00013 
-HFC143a_emissions=csv:emissions/RCP26_emissions.csv
+rho_HFC143a=0.00013 
+HFC143a_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=84.04
 
 ;[HFC152a_halocarbon]
 ;tau=1.4
-;rho=0.00009 
-;HFC152a_emissions=csv:emissions/RCP26_emissions.csv
+;rho_HFC152a=0.00009 
+;HFC152a_emissions=csv:emissions/RCP45_emissions.csv
 ;molarMass=66.0
 
 [HFC227ea_halocarbon]
 tau=34.2
-rho=0.00026 
-HFC227ea_emissions=csv:emissions/RCP26_emissions.csv
+rho_HFC227ea=0.00026 
+HFC227ea_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=170.03
 
 [HFC245fa_halocarbon]
 tau=7.6
-rho=0.00028 
-HFC245fa_emissions=csv:emissions/RCP26_emissions.csv
+rho_HFC245fa=0.00028 
+HFC245fa_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=134.0
 
 ;[HFC236fa_halocarbon]
 ;tau=240.0
-;rho=0.00028
-;HFC236fa_emissions=csv:emissions/RCP26_emissions.csv
+;rho_HFC236fa=0.00028
+;HFC236fa_emissions=csv:emissions/RCP45_emissions.csv
 ;molarMass=152.0
 
 [SF6_halocarbon]
 tau=3200.0
-rho=0.00052
-SF6_emissions=csv:emissions/RCP26_emissions.csv
+rho_SF6=0.00052
+SF6_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=146.06
 
 [CFC11_halocarbon]
 tau=45.0
-rho=0.00025
-CFC11_emissions=csv:emissions/RCP26_emissions.csv
+rho_CFC11=0.00025
+CFC11_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=137.35
 ;ni=3
 ;FC=1
 
 [CFC12_halocarbon]
 tau=100
-rho=0.00032
-CFC12_emissions=csv:emissions/RCP26_emissions.csv
+rho_CFC12=0.00032
+CFC12_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=120.9
 ;ni=2
 ;FC=0.6
 
 [CFC113_halocarbon]
 tau=85.0
-rho=0.0003
-CFC113_emissions=csv:emissions/RCP26_emissions.csv
+rho_CFC113=0.0003
+CFC113_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=187.35
 ;ni=3
 ;FC=0.75
 
 [CFC114_halocarbon]
 tau=300
-rho=0.00031
-CFC114_emissions=csv:emissions/RCP26_emissions.csv
+rho_CFC114=0.00031
+CFC114_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=170.9
 ;ni=2
 ;FC=0.28
 
 [CFC115_halocarbon]
 tau=1700
-rho=0.00018
-CFC115_emissions=csv:emissions/RCP26_emissions.csv
+rho_CFC115=0.00018
+CFC115_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=154.45
 
 [CCl4_halocarbon]
 tau=26.0
-rho=0.00013
-CCl4_emissions=csv:emissions/RCP26_emissions.csv
+rho_CCl4=0.00013
+CCl4_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=153.8
 ;ni=4
 ;FC=1.06
 
 [CH3CCl3_halocarbon]
 tau=5.0
-rho=0.00006
-CH3CCl3_emissions=csv:emissions/RCP26_emissions.csv
+rho_CH3CCl3=0.00006
+CH3CCl3_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=133.35
 ;ni=3
 ;FC=1.08
 
 [halon1211_halocarbon]
 tau=16.0
-rho=0.00003
-halon1211_emissions=csv:emissions/RCP26_emissions.csv
+rho_halon1211=0.00003
+halon1211_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=165.35
 ;ni=1
 ;nj=1
@@ -330,64 +330,64 @@ molarMass=165.35
 
 [halon1301_halocarbon]
 tau=65.0
-rho=0.00032
-halon1301_emissions=csv:emissions/RCP26_emissions.csv
+rho_halon1301=0.00032
+halon1301_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=148.9
 ;nj=1
 ;FC=0.62
 
 [halon2402_halocarbon]
 tau=20.0
-rho=0.00033
-halon2402_emissions=csv:emissions/RCP26_emissions.csv
+rho_halon2402=0.00033
+halon2402_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=259.8
 ;nj=2
 ;FC=1.22
 
 [HCFC22_halocarbon]
 tau=12.0
-rho=0.0002
-HCFC22_emissions=csv:emissions/RCP26_emissions.csv
+rho_HCFC22=0.0002
+HCFC22_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=86.45
 ;ni=1
 ;FC=0.35
 
 [HCFC141b_halocarbon]
 tau=9.3
-rho=0.00014
-HCFC141b_emissions=csv:emissions/RCP26_emissions.csv
+rho_HCFC141b=0.00014
+HCFC141b_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=116.9
 ;ni=2
 ;FC=0.72
 
 [HCFC142b_halocarbon]
 tau=17.9
-rho=0.0002
-HCFC142b_emissions=csv:emissions/RCP26_emissions.csv
+rho_HCFC142b=0.0002
+HCFC142b_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=100.45
 ;ni=1
 ;FC=0.36
 
 ;[HCFC143_halocarbon]
 ;tau=1.3
-;rho=0.00014
-;HCFC143_emissions=csv:emissions/RCP26_emissions.csv
+;rho_HCFC143=0.00014
+;HCFC143_emissions=csv:emissions/RCP45_emissions.csv
 ;molarMass=152.9
 
 [CH3Cl_halocarbon]
 tau=1.3
-rho=0.00001
+rho_CH3Cl=0.00001
 H0=504.0		; preindustrial concentration, pptv from Saito et al 2007 GRL
-CH3Cl_emissions=csv:emissions/RCP26_emissions.csv
+CH3Cl_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=50.45
 ;ni=1
 ;FC=0.8
 
 [CH3Br_halocarbon]
 tau=0.7
-rho=0.00001
+rho_CH3Br=0.00001
 H0=5.8      	; preindustrial concentration, pptv from Saltzman et al 2004 JGR
-CH3Br_emissions=csv:emissions/RCP26_emissions.csv
+CH3Br_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=94.9
 ;nj=1
 ;FC=1.12
