--- a/.github/workflows/rcmd.yml
+++ b/.github/workflows/rcmd.yml
@@ -8,6 +8,7 @@ on:
     branches:
       - master
       - land_tracking
+      - tracking-vars
 
   schedule:
     # * is a special character in YAML so you have to quote this string
