--- a/.github/workflows/unit-testing.yaml
+++ b/.github/workflows/unit-testing.yaml
@@ -9,10 +9,12 @@ on:
       - master
       - github_actions
       - land_tracking
+      - tracking-vars
   pull_request:
     branches:
       - master
       - land_tracking
+      - tracking-vars
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
