Expose DACCS in R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(CH4_CONSTRAIN)
 export(CO2_CONSTRAIN)
 export(CO3_HL)
 export(CO3_LL)
+export(DACCS_UPTAKE)
 export(DETRITUS_C)
 export(DIC_HL)
 export(DIC_LL)
