--- a/inst/input/hector_rcp26.ini
+++ b/inst/input/hector_rcp26.ini
@@ -56,8 +56,9 @@ f_litterd=0.98		; Fraction of litter flux to detritus (balance to soil)
 f_lucv=0.1			; Fraction of land use change flux from vegetation
 f_lucd=0.01			; Fraction of land use change flux from detritus (balance from soil)
 
-; Anthropogenic contributions: direct emissions and land use change, Pg C/yr
+; Anthropogenic contributions: emissions, direct air carbon capture and storage, and land use change, Pg C/yr
 ffi_emissions=csv:emissions/RCP26_emissions.csv
+daccs_uptake=csv:emissions/RCP26_emissions.csv
 luc_emissions=csv:emissions/RCP26_emissions.csv
 
 ; Optional atmospheric CO2 constraint, ppmv
