Returning tracking data as a string to R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -182,6 +182,7 @@ export(create_biome)
 export(enddate)
 export(fetchvars)
 export(get_biome_list)
+export(get_tracking_data)
 export(getdate)
 export(getname)
 export(getunits)
