Return a data frame, not string

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -183,6 +183,7 @@ export(enddate)
 export(fetchvars)
 export(get_biome_list)
 export(get_tracking_data)
+export(get_tracking_data_impl)
 export(getdate)
 export(getname)
 export(getunits)
