--- a/.github/workflows/rcmd.yml
+++ b/.github/workflows/rcmd.yml
@@ -3,10 +3,11 @@ on:
   push:
     branches:
       - master
-      - github_actions
+      - main
   pull_request:
     branches:
       - master
+      - main
       - land_tracking
       - tracking-vars
 
@@ -70,12 +71,11 @@ jobs:
 
       - name: Install system dependencies
         if: runner.os == 'Linux'
-        env:
-          RHUB_PLATFORM: linux-x86_64-ubuntu-gcc
         run: |
-          Rscript -e "remotes::install_github('r-hub/sysreqs')"
-          sysreqs=$(Rscript -e "cat(sysreqs::sysreq_commands('DESCRIPTION'))")
-          sudo -s eval "$sysreqs"
+          while read -r cmd
+          do
+            eval sudo $cmd
+          done < <(Rscript -e 'writeLines(remotes::system_requirements("ubuntu", "16.04"))')
 
       - name: Install XQuartz on MacOS
         if: runner.os == 'macOS'
