Address R CMD CHECK warnings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -201,4 +201,5 @@ export(shutdown)
 export(split_biome)
 export(startdate)
 importFrom(Rcpp,sourceCpp)
+importFrom(utils,read.csv)
 useDynLib(hector)
