Carbon tracking code upgrades
* Set ocean c tracking variable from the actual ocean component value
* Set start-tracking year from INI file (in core section)
* Expose tracking date in R
* Integrate ocean into carbon-tracking scheme
* Separate surface fluxes; model builds, runs, identical outputs!
* Ocean sees atmosphere C sources
* Add tracking run to command line tests
* Generate new comparison data
* Split FFI into two separate inputs, FFI and DACCS (#474) and expose DACCS in R
* Update all INI files; put negative 2.6 emissions into the new DACCS column
* Returning tracking data as a data.frame to R
* csvFluxPoolVisitor now is informed of, and respects, core resets
* New vignette explaining carbon tracking.
* New test file test_tracking.R
* Include component name in tracking output
* Add @leeyap as contributor

Co-authored-by: leeyap <87151968+leeyap@users.noreply.github.com>

--- a/.github/workflows/rcmd.yml
+++ b/.github/workflows/rcmd.yml
@@ -3,11 +3,13 @@ on:
   push:
     branches:
       - master
-      - github_actions
+      - main
   pull_request:
     branches:
       - master
+      - main
       - land_tracking
+      - tracking-vars
 
   schedule:
     # * is a special character in YAML so you have to quote this string
@@ -69,12 +71,11 @@ jobs:
 
       - name: Install system dependencies
         if: runner.os == 'Linux'
-        env:
-          RHUB_PLATFORM: linux-x86_64-ubuntu-gcc
         run: |
-          Rscript -e "remotes::install_github('r-hub/sysreqs')"
-          sysreqs=$(Rscript -e "cat(sysreqs::sysreq_commands('DESCRIPTION'))")
-          sudo -s eval "$sysreqs"
+          while read -r cmd
+          do
+            eval sudo $cmd
+          done < <(Rscript -e 'writeLines(remotes::system_requirements("ubuntu", "16.04"))')
 
       - name: Install XQuartz on MacOS
         if: runner.os == 'macOS'
