--- a/inst/input/hector_rcp85.ini
+++ b/inst/input/hector_rcp85.ini
@@ -4,6 +4,7 @@
 run_name=rcp85
 startDate=1745
 endDate=2300
+trackingDate=9999	; year to start tracking (only carbon currently)
 do_spinup=1			; if 1, spin up model before running (default=1)
 max_spinup=2000		; maximum steps allowed for spinup (default=2000)
 
@@ -55,8 +56,9 @@ f_litterd=0.98		; Fraction of litter flux to detritus (balance to soil)
 f_lucv=0.1			; Fraction of land use change flux from vegetation
 f_lucd=0.01			; Fraction of land use change flux from detritus (balance from soil)
 
-; Anthropogenic contributions: direct emissions and land use change, Pg C/yr
+; Anthropogenic contributions: emissions, direct air carbon capture and storage, and land use change, Pg C/yr
 ffi_emissions=csv:emissions/RCP85_emissions.csv
+daccs_uptake=csv:emissions/RCP85_emissions.csv
 luc_emissions=csv:emissions/RCP85_emissions.csv 
 
 ; Optional atmospheric CO2 constraint, ppmv
