--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(CH4_CONSTRAIN)
 export(CO2_CONSTRAIN)
 export(CO3_HL)
 export(CO3_LL)
+export(DACCS_UPTAKE)
 export(DETRITUS_C)
 export(DIC_HL)
 export(DIC_LL)
@@ -170,6 +171,7 @@ export(SOIL_C)
 export(TEMP_HL)
 export(TEMP_LL)
 export(TID)
+export(TRACKING_DATE)
 export(TT)
 export(TU)
 export(TWI)
@@ -182,6 +184,8 @@ export(create_biome)
 export(enddate)
 export(fetchvars)
 export(get_biome_list)
+export(get_tracking_data)
+export(get_tracking_data_impl)
 export(getdate)
 export(getname)
 export(getunits)
@@ -197,4 +201,5 @@ export(shutdown)
 export(split_biome)
 export(startdate)
 importFrom(Rcpp,sourceCpp)
+importFrom(utils,read.csv)
 useDynLib(hector)
