--- a/inst/input/hector_rcp45_tracking.ini
+++ b/inst/input/hector_rcp45_tracking.ini
@@ -1,11 +1,10 @@
-;Config file for hector model: that uses RCP26 concentrations to drive Hector. 
-;Emission driven Hector runs capture the carbon cycle whereas concentration runs do not.
+; Config file for hector model: RCP45
 ;------------------------------------------------------------------------
 [core]
-run_name=rcp26_co2constrain
+run_name=rcp45
 startDate=1745
 endDate=2300
-trackingDate=9999	; year to start tracking (only carbon currently)
+trackingDate=1850	; year to start tracking (only carbon currently)
 do_spinup=1			; if 1, spin up model before running (default=1)
 max_spinup=2000		; maximum steps allowed for spinup (default=2000)
 
@@ -58,15 +57,15 @@ f_lucv=0.1			; Fraction of land use change flux from vegetation
 f_lucd=0.01			; Fraction of land use change flux from detritus (balance from soil)
 
 ; Anthropogenic contributions: emissions, direct air carbon capture and storage, and land use change, Pg C/yr
-ffi_emissions=csv:emissions/RCP26_emissions.csv
-daccs_uptake=csv:emissions/RCP26_emissions.csv
-luc_emissions=csv:emissions/RCP26_emissions.csv
+ffi_emissions=csv:emissions/RCP45_emissions.csv
+daccs_uptake=csv:emissions/RCP45_emissions.csv
+luc_emissions=csv:emissions/RCP45_emissions.csv 
 
 ; Optional atmospheric CO2 constraint, ppmv
 ; If supplied, the model will use these data, ignoring what it calculates
 ; Any residual between model [CO2] and model [CO2] will be put into the deep ocean
 ;CO2_constrain=csv:constraints/lawdome_co2.csv		; Law Dome CO2 record
-CO2_constrain=csv:constraints/rcp26_co2ppm.csv	; MAGICC output
+;CO2_constrain=csv:constraints/RCP45_co2ppm.csv	; MAGICC output
 
 ; CO2 and temperature effects on the carbon cycle
 ; these are global values, can optionally specify biome-specific ones as above
@@ -75,7 +74,7 @@ q10_rh=2.0		; respiration response Q10, unitless
 
 ; Optional biome-specific warming factors
 ; by default, assume 1.0 (i.e., warms as fast as the globe)
-;boreal.warming=1.2	; i.e., biome will warm 1.2 C for every 1 C globally
+;boreal.warmingfactor=1.2	; i.e., biome will warm 1.2 C for every 1 C globally
 
 ; Albedo effect, in W/m2. The model assumes a constant value if nothing specified
 Ftalbedo[1750]=0.0
@@ -92,7 +91,7 @@ eps_spinup=0.001	; spinup tolerance (drift), Pg C
 [so2] 
 S0=53841.2 			; historical sulphate from year 2000 (Gg)
 SN=42000			; natural sulfur emissions (Gg)
-SO2_emissions=csv:emissions/RCP26_emissions.csv 	; emissions time series
+SO2_emissions=csv:emissions/RCP45_emissions.csv 	; emissions time series
 SV=csv:emissions/volcanic_RF.csv   			  	; emissions time series
 
 ;------------------------------------------------------------------------
@@ -102,13 +101,13 @@ Tsoil=160 			; CH4 loss to soil (years)
 Tstrat=120          ; CH4 loss to stratosphere (years)
 UC_CH4=2.78			; Tg(CH4)/ppb unit conversion between emissions and concentrations
 CH4N=300			; Natural CH4 emissions (Tgrams)
-CH4_emissions=csv:emissions/RCP26_emissions.csv     ; emissions time series
+CH4_emissions=csv:emissions/RCP45_emissions.csv     ; emissions time series
 
 ;------------------------------------------------------------------------
 [OH]
-NOX_emissions=csv:emissions/RCP26_emissions.csv     ; emissions time series
-CO_emissions=csv:emissions/RCP26_emissions.csv      ; emissions time series
-NMVOC_emissions=csv:emissions/RCP26_emissions.csv   ; emissions time series
+NOX_emissions=csv:emissions/RCP45_emissions.csv     ; emissions time series
+CO_emissions=csv:emissions/RCP45_emissions.csv      ; emissions time series
+NMVOC_emissions=csv:emissions/RCP45_emissions.csv   ; emissions time series
 
 TOH0=6.6			; inital OH lifetime (years)
 CNOX=0.0042			; coefficent for NOX
@@ -119,9 +118,9 @@ CCH4=-0.32			; coefficent for CH4
 ;------------------------------------------------------------------------
 [ozone]
 PO3=30.0 				; preindustrial O3 concentration
-NOX_emissions=csv:emissions/RCP26_emissions.csv  	; emissions time series
-CO_emissions=csv:emissions/RCP26_emissions.csv	; emissions time series
-NMVOC_emissions=csv:emissions/RCP26_emissions.csv ; emissions time series
+NOX_emissions=csv:emissions/RCP45_emissions.csv  	; emissions time series
+CO_emissions=csv:emissions/RCP45_emissions.csv	; emissions time series
+NMVOC_emissions=csv:emissions/RCP45_emissions.csv ; emissions time series
 ;molarMass=16.04    ; grams
 ;tau=10				; lifetime in years  (Oucher et al 2009)
 
@@ -137,7 +136,7 @@ N2O_natural_emissions[1765]=11  ; natural emissions in 1765, TgN
 N2O_natural_emissions[2000]=8   ; natural emissions in 2000, TgN
 N2O_natural_emissions[2300]=8   ; natural emissions in 2300, TgN
 
-N2O_emissions=csv:emissions/RCP26_emissions.csv   ; emissions time series
+N2O_emissions=csv:emissions/RCP45_emissions.csv   ; emissions time series
 ;molarMass=44.01     ; grams
 
 ;------------------------------------------------------------------------
@@ -146,7 +145,7 @@ baseyear=1750		; when to start reporting; by definition, all F=0 in this year
 
 ; Optional radiative forcing constraint
 ; If supplied, the model will use these data, ignoring what it calculates
-;Ftot_constrain=csv:constraints/MAGICC_RF_8.5.csv
+;Ftot_constrain=csv:constraints/MAGICC_RF_4.5.csv
 
 ;------------------------------------------------------------------------
 [temperature]
@@ -162,11 +161,11 @@ volscl=1.0    ; scaling factor for volcanic forcing
 
 ;------------------------------------------------------------------------
 [bc]
-BC_emissions=csv:emissions/RCP26_emissions.csv
+BC_emissions=csv:emissions/RCP45_emissions.csv
 
 ;------------------------------------------------------------------------
 [oc]
-OC_emissions=csv:emissions/RCP26_emissions.csv
+OC_emissions=csv:emissions/RCP45_emissions.csv
 
 ;------------------------------------------------------------------------
 ; Halocarbons
@@ -176,91 +175,91 @@ OC_emissions=csv:emissions/RCP26_emissions.csv
 tau=50000.0 		; lifetime in years
 rho=0.00008 		; radiative efficiencies W/m2/ppt
 H0=35.0,pptv		; preindustrial concentration, pptv
-CF4_emissions=csv:emissions/RCP26_emissions.csv
+CF4_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=88.0043	; grams
 
 [C2F6_halocarbon]
 tau=10000.0
 rho=0.00026
-C2F6_emissions=csv:emissions/RCP26_emissions.csv
+C2F6_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=138.01
 
 ;[C4F10_halocarbon]
 ;tau=2600.0
 ;rho=0.00033
-;C4F10_emissions=csv:emissions/RCP26_emissions.csv
+;C4F10_emissions=csv:emissions/RCP45_emissions.csv
 ;molarMass=238.0
 
 [HFC23_halocarbon]
 tau=270.0
 rho=0.00019 
-HFC23_emissions=csv:emissions/RCP26_emissions.csv
+HFC23_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=70.0
 
 [HFC32_halocarbon]
 tau=4.9
 rho=0.00011 
-HFC32_emissions=csv:emissions/RCP26_emissions.csv
+HFC32_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=52.0
 
 [HFC4310_halocarbon]
 tau=15.9
 rho=0.0004 
-HFC4310_emissions=csv:emissions/RCP26_emissions.csv
+HFC4310_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=252.0
 
 [HFC125_halocarbon]
 tau=29.0
 rho=0.00023 
-HFC125_emissions=csv:emissions/RCP26_emissions.csv
+HFC125_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=120.02
 
 [HFC134a_halocarbon]
 tau=14.0
 rho=0.00016
-HFC134a_emissions=csv:emissions/RCP26_emissions.csv
+HFC134a_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=102.02
 
 [HFC143a_halocarbon]
 tau=52.0
 rho=0.00013 
-HFC143a_emissions=csv:emissions/RCP26_emissions.csv
+HFC143a_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=84.04
 
 ;[HFC152a_halocarbon]
 ;tau=1.4
 ;rho=0.00009 
-;HFC152a_emissions=csv:emissions/RCP26_emissions.csv
+;HFC152a_emissions=csv:emissions/RCP45_emissions.csv
 ;molarMass=66.0
 
 [HFC227ea_halocarbon]
 tau=34.2
 rho=0.00026 
-HFC227ea_emissions=csv:emissions/RCP26_emissions.csv
+HFC227ea_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=170.03
 
 [HFC245fa_halocarbon]
 tau=7.6
 rho=0.00028 
-HFC245fa_emissions=csv:emissions/RCP26_emissions.csv
+HFC245fa_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=134.0
 
 ;[HFC236fa_halocarbon]
 ;tau=240.0
 ;rho=0.00028
-;HFC236fa_emissions=csv:emissions/RCP26_emissions.csv
+;HFC236fa_emissions=csv:emissions/RCP45_emissions.csv
 ;molarMass=152.0
 
 [SF6_halocarbon]
 tau=3200.0
 rho=0.00052
-SF6_emissions=csv:emissions/RCP26_emissions.csv
+SF6_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=146.06
 
 [CFC11_halocarbon]
 tau=45.0
 rho=0.00025
-CFC11_emissions=csv:emissions/RCP26_emissions.csv
+CFC11_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=137.35
 ;ni=3
 ;FC=1
@@ -268,7 +267,7 @@ molarMass=137.35
 [CFC12_halocarbon]
 tau=100
 rho=0.00032
-CFC12_emissions=csv:emissions/RCP26_emissions.csv
+CFC12_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=120.9
 ;ni=2
 ;FC=0.6
@@ -276,7 +275,7 @@ molarMass=120.9
 [CFC113_halocarbon]
 tau=85.0
 rho=0.0003
-CFC113_emissions=csv:emissions/RCP26_emissions.csv
+CFC113_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=187.35
 ;ni=3
 ;FC=0.75
@@ -284,7 +283,7 @@ molarMass=187.35
 [CFC114_halocarbon]
 tau=300
 rho=0.00031
-CFC114_emissions=csv:emissions/RCP26_emissions.csv
+CFC114_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=170.9
 ;ni=2
 ;FC=0.28
@@ -292,13 +291,13 @@ molarMass=170.9
 [CFC115_halocarbon]
 tau=1700
 rho=0.00018
-CFC115_emissions=csv:emissions/RCP26_emissions.csv
+CFC115_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=154.45
 
 [CCl4_halocarbon]
 tau=26.0
 rho=0.00013
-CCl4_emissions=csv:emissions/RCP26_emissions.csv
+CCl4_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=153.8
 ;ni=4
 ;FC=1.06
@@ -306,7 +305,7 @@ molarMass=153.8
 [CH3CCl3_halocarbon]
 tau=5.0
 rho=0.00006
-CH3CCl3_emissions=csv:emissions/RCP26_emissions.csv
+CH3CCl3_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=133.35
 ;ni=3
 ;FC=1.08
@@ -314,7 +313,7 @@ molarMass=133.35
 [halon1211_halocarbon]
 tau=16.0
 rho=0.00003
-halon1211_emissions=csv:emissions/RCP26_emissions.csv
+halon1211_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=165.35
 ;ni=1
 ;nj=1
@@ -323,7 +322,7 @@ molarMass=165.35
 [halon1301_halocarbon]
 tau=65.0
 rho=0.00032
-halon1301_emissions=csv:emissions/RCP26_emissions.csv
+halon1301_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=148.9
 ;nj=1
 ;FC=0.62
@@ -331,7 +330,7 @@ molarMass=148.9
 [halon2402_halocarbon]
 tau=20.0
 rho=0.00033
-halon2402_emissions=csv:emissions/RCP26_emissions.csv
+halon2402_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=259.8
 ;nj=2
 ;FC=1.22
@@ -339,7 +338,7 @@ molarMass=259.8
 [HCFC22_halocarbon]
 tau=12.0
 rho=0.0002
-HCFC22_emissions=csv:emissions/RCP26_emissions.csv
+HCFC22_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=86.45
 ;ni=1
 ;FC=0.35
@@ -347,7 +346,7 @@ molarMass=86.45
 [HCFC141b_halocarbon]
 tau=9.3
 rho=0.00014
-HCFC141b_emissions=csv:emissions/RCP26_emissions.csv
+HCFC141b_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=116.9
 ;ni=2
 ;FC=0.72
@@ -355,7 +354,7 @@ molarMass=116.9
 [HCFC142b_halocarbon]
 tau=17.9
 rho=0.0002
-HCFC142b_emissions=csv:emissions/RCP26_emissions.csv
+HCFC142b_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=100.45
 ;ni=1
 ;FC=0.36
@@ -363,14 +362,14 @@ molarMass=100.45
 ;[HCFC143_halocarbon]
 ;tau=1.3
 ;rho=0.00014
-;HCFC143_emissions=csv:emissions/RCP26_emissions.csv
+;HCFC143_emissions=csv:emissions/RCP45_emissions.csv
 ;molarMass=152.9
 
 [CH3Cl_halocarbon]
 tau=1.3
 rho=0.00001
 H0=504.0		; preindustrial concentration, pptv from Saito et al 2007 GRL
-CH3Cl_emissions=csv:emissions/RCP26_emissions.csv
+CH3Cl_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=50.45
 ;ni=1
 ;FC=0.8
@@ -379,7 +378,7 @@ molarMass=50.45
 tau=0.7
 rho=0.00001
 H0=5.8      	; preindustrial concentration, pptv from Saltzman et al 2004 JGR
-CH3Br_emissions=csv:emissions/RCP26_emissions.csv
+CH3Br_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=94.9
 ;nj=1
 ;FC=1.12
