Add permafrost to INI files

--- a/inst/input/hector_rcp60.ini
+++ b/inst/input/hector_rcp60.ini
@@ -45,6 +45,8 @@ detritus_c=55			; detritus, Pg C
 ;boreal.soil_c=1200
 ;tropical.soil_c=578
 soil_c=1782   			; soil, Pg C
+permafrost_c=0			; permafrost, Pg C
+
 ;boreal.npp_flux0=5.0
 ;tropical.npp_flux0=45.0
 npp_flux0=50.0			; net primary production, Pg C/yr
