--- a/inst/input/hector_rcp26.ini
+++ b/inst/input/hector_rcp26.ini
@@ -47,6 +47,8 @@ detritus_c=55			; detritus, Pg C
 soil_c=1782   			; soil, Pg C
 ;boreal.npp_flux0=5.0
 ;tropical.npp_flux0=45.0
+permafrost_c=0			; permafrost, Pg C
+
 npp_flux0=50.0			; net primary production, Pg C/yr
 
 ; Partitioning parameters
