R code upgrades for permafrost

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -118,6 +118,7 @@ export(OCEAN_C_LL)
 export(OCEAN_SURFACE_TEMP)
 export(PCO2_HL)
 export(PCO2_LL)
+export(PERMAFROST_C)
 export(PH_HL)
 export(PH_LL)
 export(PREINDUSTRIAL_CH4)
