Inital doeclim rework (#510)
Start of re-working the doeclim integration 
1. use consistent CO2 RF efficiency across components 
2. expand on temperature & ocean component documentation 
3. fix output streams & remove duplicate outputs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,7 +77,6 @@ export(F_NPPD)
 export(F_NPPV)
 export(GETDATA)
 export(GLOBAL_TEMP)
-export(GLOBAL_TEMPEQ)
 export(HALON1211_CONSTRAIN)
 export(HALON1301_CONSTRAIN)
 export(HALON2402_CONSTRAIN)
@@ -181,6 +180,7 @@ export(VOLCANIC_SCALE)
 export(VOLCANIC_SO2)
 export(WARMINGFACTOR)
 export(Y2000_SO2)
+export(alpha_CO2)
 export(create_biome)
 export(enddate)
 export(fetchvars)
