Save the work in progress.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,8 @@ export(DELTA_CFC12)
 export(DELTA_CH3BR)
 export(DELTA_CH3CCL3)
 export(DELTA_CH3CL)
+export(DELTA_CH4)
+export(DELTA_CO2)
 export(DELTA_HALON1211)
 export(DELTA_HALON1301)
 export(DELTA_HALON2402)
@@ -52,6 +54,7 @@ export(DELTA_HFC23)
 export(DELTA_HFC245FA)
 export(DELTA_HFC32)
 export(DELTA_HFC4310)
+export(DELTA_N2O)
 export(DELTA_SF6)
 export(DETRITUS_C)
 export(DIC_HL)
@@ -191,6 +194,7 @@ export(RF_TOTAL)
 export(RF_T_ALBEDO)
 export(RF_VOL)
 export(RH)
+export(RHO_BC)
 export(RHO_C2F6)
 export(RHO_CCL4)
 export(RHO_CF4)
@@ -216,7 +220,9 @@ export(RHO_HFC23)
 export(RHO_HFC245FA)
 export(RHO_HFC32)
 export(RHO_HFC4310)
+export(RHO_OC)
 export(RHO_SF6)
+export(RHO_SO2)
 export(SETDATA)
 export(SF6_CONSTRAIN)
 export(SOIL_C)
