--- a/inst/input/hector_rcp45.ini
+++ b/inst/input/hector_rcp45.ini
@@ -10,7 +10,7 @@ max_spinup=2000		; maximum steps allowed for spinup (default=2000)
 
 ;------------------------------------------------------------------------
 [ocean]
-enabled=1			; putting 'enabled=0' will disable any component			
+enabled=1			; putting 'enabled=0' will disable any component
 spinup_chem=0		; run surface chemistry during spinup phase?
 ;carbon_HL=145		; high latitude, Pg C
 ;carbon_LL=750		; low latitude, Pg C
@@ -30,12 +30,12 @@ tid=200000000       ; 2.0e8 intermediate-deep exchange, m3/s
 [simpleNbox]
 ; Initial (preindustrial) carbon pools and fluxes
 ; These are generally consistent with reconstructed (Siegenthaler and Oeschger
-; 1987, 10.1111/j.1600-0889.1987.tb00278.x) and modeled (e.g. Ricciuto 2008, 
+; 1987, 10.1111/j.1600-0889.1987.tb00278.x) and modeled (e.g. Ricciuto 2008,
 ; 10.1029/2006GB002908; Murakami 2010, 10.1007/s00704-009-0232-8) values.
 
 ; If using biomes (e.g. boreal.veg_c) must have data for all pools*biomes
 atmos_c=588.071			; Pg C in CO2, from Murakami et al. (2010)
-;C0=276					; another way to specify, in ppmv
+C0=277.15			; preindustrial CO2 from table 7.SM.1
 ;boreal.veg_c=100		; e.g.
 ;tropical.veg_c=450		;
 veg_c=550				; vegetation, Pg C
@@ -59,7 +59,7 @@ f_lucd=0.01			; Fraction of land use change flux from detritus (balance from soi
 ; Anthropogenic contributions: emissions, direct air carbon capture and storage, and land use change, Pg C/yr
 ffi_emissions=csv:emissions/RCP45_emissions.csv
 daccs_uptake=csv:emissions/RCP45_emissions.csv
-luc_emissions=csv:emissions/RCP45_emissions.csv 
+luc_emissions=csv:emissions/RCP45_emissions.csv
 
 ; Optional atmospheric CO2 constraint, ppmv
 ; If supplied, the model will use these data, ignoring what it calculates
@@ -88,17 +88,17 @@ dt=0.25				; default time step
 eps_spinup=0.001	; spinup tolerance (drift), Pg C
 
 ;------------------------------------------------------------------------
-[so2] 
+[so2]
 S0=53841.2 			; historical sulphate from year 2000 (Gg)
 SN=42000			; natural sulfur emissions (Gg)
 SO2_emissions=csv:emissions/RCP45_emissions.csv 	; emissions time series
-SV=csv:emissions/volcanic_RF.csv   			  	; emissions time series
+SV=csv:emissions/volcanic_RF.csv   			; volcanic radiative forcing time series
 
 ;------------------------------------------------------------------------
 [CH4]
-M0=653  			; 721.8941 preindustrial methane, ppbv ; assumed to be 700 ppbv IPCC, 2001 Table 6.1
+M0=731.41  			; 731.41 ppb preindustrial methane IPCC AR6 Table 7.SM.1, the CH4 forcing equations is calibrated to a M0 of 731.41 ppb
 Tsoil=160 			; CH4 loss to soil (years)
-Tstrat=120          ; CH4 loss to stratosphere (years)
+Tstrat=120          		; CH4 loss to stratosphere (years)
 UC_CH4=2.78			; Tg(CH4)/ppb unit conversion between emissions and concentrations
 CH4N=300			; Natural CH4 emissions (Tgrams)
 CH4_emissions=csv:emissions/RCP45_emissions.csv     ; emissions time series
@@ -126,7 +126,7 @@ NMVOC_emissions=csv:emissions/RCP45_emissions.csv ; emissions time series
 
 ;------------------------------------------------------------------------
 [N2O]
-N0=272.9596		; preindustrial nitrous oxide, ppbv
+N0=273.87 		; (ppb) preindustrial nitrous oxide from IPCC AR6 table 7.SM.1
 UC_N2O=4.8		; TgN/ppbv unit conversion between emissions and concentrations
 TN2O0=132       ; initial lifetime of N2O, years
 
@@ -147,6 +147,12 @@ baseyear=1750		; when to start reporting; by definition, all F=0 in this year
 ; If supplied, the model will use these data, ignoring what it calculates
 ;Ftot_constrain=csv:constraints/MAGICC_RF_4.5.csv
 aco2=5.35		; forcing efficiency for CO2, W/m2
+delta_co2=0.05		; (unitless) forcing tropospheric adjustments for CO2 (7.3.2.1 of IPCC AR6)
+delta_ch4=-.14		; (unitless) forcing tropospheric adjustments for CH4 (7.3.2.2 of IPCC AR6)
+delta_n2o=0.7		; (unitless) forcing tropospheric adjustments for N2O (7.3.2.3 of IPCC AR6)
+rho_bc=0.0508           ; (W yr m–2 Tg–1) IPCC AR6 radiative efficiency BC (7.SM.1.3 of IPCC AR6)
+rho_oc=-.00621          ; (W yr m–2 Tg–1) IPCC AR6 radiative efficiency OC (7.SM.1.3.1 of IPCC AR6)
+rho_so2=-.0000181       ; (W yr m–2 Gg) IPCC AR6 radiative efficiency SO2 (7.SM.1.3.1 of IPCC AR6)
 
 ;------------------------------------------------------------------------
 [temperature]
@@ -156,6 +162,7 @@ S=3.0 				; equilibrium climate sensitivity for 2xCO2, degC
 diff=2.3			; ocean heat diffusivity, cm2/s
 alpha=1.0     ; scaling factor for aerosol forcing
 volscl=1.0    ; scaling factor for volcanic forcing
+
 ; Optional global temperature constraint
 ; If supplied, the model will use these data, ignoring what it calculates
 ; tgav_constrain=csv:constraints/tgav_historical.csv
@@ -170,216 +177,189 @@ OC_emissions=csv:emissions/RCP45_emissions.csv
 
 ;------------------------------------------------------------------------
 ; Halocarbons
-; Tau (lifetime) and Rho (radiative efficiency) from IPCC (2005, Table 2.14)
+; tau (lifetime), rho (radiative efficiency), delta (tropospheric adjustments scalar)
 
 [CF4_halocarbon]
-tau=50000.0 		; lifetime in years
-rho=0.00008 		; radiative efficiencies W/m2/ppt
-H0=35.0,pptv		; preindustrial concentration, pptv
+tau=50000.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_CF4=0.000099 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_CF4=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
+H0=35.0,pptv					; preindustrial concentration, pptv
 CF4_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=88.0043	; grams
+molarMass=88.0043				; grams
 
 [C2F6_halocarbon]
-tau=10000.0
-rho=0.00026
+tau=10000.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_C2F6=0.000261 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_C2F6=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 C2F6_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=138.01
-
-;[C4F10_halocarbon]
-;tau=2600.0
-;rho=0.00033
-;C4F10_emissions=csv:emissions/RCP45_emissions.csv
-;molarMass=238.0
+molarMass=138.01				; grams
 
 [HFC23_halocarbon]
-tau=270.0
-rho=0.00019 
+tau=228.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_HFC23=0.000191 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_HFC23=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 HFC23_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=70.0
+molarMass=70.0				; grams
 
 [HFC32_halocarbon]
-tau=4.9
-rho=0.00011 
+tau=5.4 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_HFC32=0.000111 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_HFC32=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 HFC32_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=52.0
+molarMass=52.0					; grams
 
-[HFC4310_halocarbon]
+[HFC4310_halocarbon]				; NOTES this is not listed in IPCC AR6
 tau=15.9
-rho=0.0004 
+rho_HFC4310=0.0004
+delta_HFC4310=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 HFC4310_emissions=csv:emissions/RCP45_emissions.csv
 molarMass=252.0
 
 [HFC125_halocarbon]
-tau=29.0
-rho=0.00023 
+tau=30.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_HFC125=0.000234 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_HFC125=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 HFC125_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=120.02
+molarMass=120.02				; grams
 
 [HFC134a_halocarbon]
-tau=14.0
-rho=0.00016
+tau=14.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_HFC134a=0.000167 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_HFC134a=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 HFC134a_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=102.02
+molarMass=102.02				; grams
 
 [HFC143a_halocarbon]
-tau=52.0
-rho=0.00013 
+tau=51.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_HFC143a=0.000168 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_HFC143a=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 HFC143a_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=84.04
-
-;[HFC152a_halocarbon]
-;tau=1.4
-;rho=0.00009 
-;HFC152a_emissions=csv:emissions/RCP45_emissions.csv
-;molarMass=66.0
+molarMass=84.04					; grams
 
 [HFC227ea_halocarbon]
-tau=34.2
-rho=0.00026 
+tau=36.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_HFC227ea=0.000273 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_HFC227ea=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 HFC227ea_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=170.03
+molarMass=170.03				; grams
 
 [HFC245fa_halocarbon]
-tau=7.6
-rho=0.00028 
+tau=7.9 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_HFC245fa=0.000245 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_HFC245fa=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 HFC245fa_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=134.0
-
-;[HFC236fa_halocarbon]
-;tau=240.0
-;rho=0.00028
-;HFC236fa_emissions=csv:emissions/RCP45_emissions.csv
-;molarMass=152.0
+molarMass=134.0					; grams
 
 [SF6_halocarbon]
-tau=3200.0
-rho=0.00052
+tau=3200.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_SF6=0.000567 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_SF6=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 SF6_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=146.06
+molarMass=146.06				; grams
 
 [CFC11_halocarbon]
-tau=45.0
-rho=0.00025
+tau=52.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_CFC11=0.000259 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_CFC11=0.13 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 CFC11_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=137.35
-;ni=3
-;FC=1
+molarMass=137.35				; grams
 
 [CFC12_halocarbon]
-tau=100
-rho=0.00032
+tau=102.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_CFC12=0.00032 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_CFC12=0.13 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 CFC12_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=120.9
-;ni=2
-;FC=0.6
+molarMass=120.9					; grams
 
 [CFC113_halocarbon]
-tau=85.0
-rho=0.0003
+tau=93.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_CFC113=0.000301 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_CFC113=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 CFC113_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=187.35
-;ni=3
-;FC=0.75
+molarMass=187.35				; grams
 
 [CFC114_halocarbon]
-tau=300
-rho=0.00031
+tau=189 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_CFC114=0.000314 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_CFC114=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 CFC114_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=170.9
-;ni=2
-;FC=0.28
+molarMass=170.9					; grams
 
 [CFC115_halocarbon]
-tau=1700
-rho=0.00018
+tau=540 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_CFC115=0.000246 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_CFC115=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 CFC115_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=154.45
+molarMass=154.45				; grams
 
 [CCl4_halocarbon]
-tau=26.0
-rho=0.00013
+tau=32.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_CCl4=0.000166 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_CCl4=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 CCl4_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=153.8
-;ni=4
-;FC=1.06
+molarMass=153.8					; grams
 
 [CH3CCl3_halocarbon]
-tau=5.0
-rho=0.00006
+tau=5.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_CH3CCl3=0.000065 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_CH3CCl3=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 CH3CCl3_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=133.35
-;ni=3
-;FC=1.08
+molarMass=133.35				; grams
 
 [halon1211_halocarbon]
-tau=16.0
-rho=0.00003
+tau=16.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_halon1211=0.00003 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_halon1211=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 halon1211_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=165.35
-;ni=1
-;nj=1
-;FC=1.18
+molarMass=165.35				; grams
 
 [halon1301_halocarbon]
-tau=65.0
-rho=0.00032
+tau=72.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_halon1301=0.000299 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_halon1301=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 halon1301_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=148.9
-;nj=1
-;FC=0.62
+molarMass=148.9					; grams
 
 [halon2402_halocarbon]
-tau=20.0
-rho=0.00033
+tau=28.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_halon2402=0.000312 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_halon2402=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 halon2402_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=259.8
-;nj=2
-;FC=1.22
+molarMass=259.8					; grams
 
 [HCFC22_halocarbon]
-tau=12.0
-rho=0.0002
+tau=11.9 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_HCFC22=0.000214 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_HCFC22=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 HCFC22_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=86.45
-;ni=1
-;FC=0.35
+molarMass=86.45					; grams
 
 [HCFC141b_halocarbon]
-tau=9.3
-rho=0.00014
+tau=9.4 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_HCFC141b=0.000161 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_HCFC141b=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 HCFC141b_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=116.9
-;ni=2
-;FC=0.72
+molarMass=116.9					; grams
 
 [HCFC142b_halocarbon]
-tau=17.9
-rho=0.0002
+tau=18.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_HCFC142b=0.000193 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_HCFC142b=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
 HCFC142b_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=100.45
-;ni=1
-;FC=0.36
-
-;[HCFC143_halocarbon]
-;tau=1.3
-;rho=0.00014
-;HCFC143_emissions=csv:emissions/RCP45_emissions.csv
-;molarMass=152.9
+molarMass=100.45				; grams
 
 [CH3Cl_halocarbon]
-tau=1.3
-rho=0.00001
-H0=504.0		; preindustrial concentration, pptv from Saito et al 2007 GRL
+tau=0.9 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_CH3Cl=0.000005 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_CH3Cl=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
+H0=504.0					; preindustrial concentration, pptv from Saito et al 2007 GRL
 CH3Cl_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=50.45
-;ni=1
-;FC=0.8
+molarMass=50.45					; grams
 
 [CH3Br_halocarbon]
-tau=0.7
-rho=0.00001
-H0=5.8      	; preindustrial concentration, pptv from Saltzman et al 2004 JGR
+tau=0.8 					; lifetime in years (Table 7.SM.7 IPPC AR6)
+rho_CH3Br=0.000004 					; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
+delta_CH3Br=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
+H0=5.8      					; preindustrial concentration, pptv from Saltzman et al 2004 JGR
 CH3Br_emissions=csv:emissions/RCP45_emissions.csv
-molarMass=94.9
-;nj=1
-;FC=1.12
+molarMass=94.9					; grams
