added nh3 emissions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ export(EMISSIONS_HFC245FA)
 export(EMISSIONS_HFC32)
 export(EMISSIONS_HFC4310)
 export(EMISSIONS_N2O)
+export(EMISSIONS_NH3)
 export(EMISSIONS_NMVOC)
 export(EMISSIONS_NOX)
 export(EMISSIONS_OC)
@@ -184,6 +185,7 @@ export(RF_HFC245FA)
 export(RF_HFC32)
 export(RF_HFC4310)
 export(RF_N2O)
+export(RF_NH3)
 export(RF_O3_TROP)
 export(RF_OC)
 export(RF_SF6)
@@ -220,6 +222,7 @@ export(RHO_HFC23)
 export(RHO_HFC245FA)
 export(RHO_HFC32)
 export(RHO_HFC4310)
+export(RHO_NH3)
 export(RHO_OC)
 export(RHO_SF6)
 export(RHO_SO2)
