work in progress

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -155,6 +155,8 @@ export(PREINDUSTRIAL_CO2)
 export(PREINDUSTRIAL_N2O)
 export(PREINDUSTRIAL_O3)
 export(Q10_RH)
+export(Q_CO2)
+export(RF_ACI)
 export(RF_BC)
 export(RF_C2F6)
 export(RF_CCL4)
@@ -190,8 +192,6 @@ export(RF_O3_TROP)
 export(RF_OC)
 export(RF_SF6)
 export(RF_SO2)
-export(RF_SO2D)
-export(RF_SO2I)
 export(RF_TOTAL)
 export(RF_T_ALBEDO)
 export(RF_VOL)
@@ -241,7 +241,6 @@ export(VOLCANIC_SCALE)
 export(VOLCANIC_SO2)
 export(WARMINGFACTOR)
 export(Y2000_SO2)
-export(alpha_CO2)
 export(create_biome)
 export(enddate)
 export(fetchvars)
