add ability to read in misc forcings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -186,6 +186,7 @@ export(RF_HFC23)
 export(RF_HFC245FA)
 export(RF_HFC32)
 export(RF_HFC4310)
+export(RF_MISC)
 export(RF_N2O)
 export(RF_NH3)
 export(RF_O3_TROP)
