Switch to C++ 17 / std::filesystem (#521)
* Make using the C++ 17 standard the default which means we do not need to link Boost system/filesystem.  And update the Xcode project file accordingly (Visual Studio project file update still to come).

* For users who do not have C++ 17 or MacOS 10.15+ we will recommend using the command line build and setting the environment variable: `NO_CXX17=1` which will allow them to go back to c++14 and linking Boost.

* Switch to C++ 17 standard in the Xcode and Visual Studio project files

* Update build documentation for C++ 17 / no boost::filesystem including what to do if you need to fall back to boost::filesystem

* Debug failing build.  It seems gcc doesn't support __cpp_lib_filesystem even with boost.  But it does have __has_include() support so let's try that.

--- a/.github/workflows/command-line.yaml
+++ b/.github/workflows/command-line.yaml
@@ -36,6 +36,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: build and run
         run: |
-          sudo apt install libboost-filesystem-dev libboost-system-dev
+          sudo apt install libboost-dev
           make hector
           bash ./test_hector.sh ./src/hector
