Create readme + more
Created readme.md file for the scripts directory with info on OutputDifferences.Rmd

Also updated file path for Rmd in yml

--- a/.github/workflows/leeyabot.yml
+++ b/.github/workflows/leeyabot.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Generate report
         run: |
-          rmarkdown::render("OutputDifferences.Rmd", run_pandoc = FALSE)
+          rmarkdown::render("/scripts/OutputDifferences.Rmd", run_pandoc = FALSE)
         shell: Rscript {0}
 
       - name: Post comment
