Remove NSO2 from Hector due to AR6 updates then natural SO2 is no longer used.

--- a/inst/input/hector_rcp45.ini
+++ b/inst/input/hector_rcp45.ini
@@ -85,7 +85,6 @@ eps_spinup=0.001	; spinup tolerance (drift), Pg C
 
 ;------------------------------------------------------------------------
 [so2]
-SN=42000			; natural sulfur emissions (Gg)
 SO2_emissions=csv:emissions/RCP45_emissions.csv 	; emissions time series
 SV=csv:emissions/volcanic_RF.csv   			; volcanic radiative forcing time series
 
@@ -185,7 +184,7 @@ NH3_emissions=csv:emissions/RCP45_emissions.csv
 tau=50000.0 					; lifetime in years (Table 7.SM.7 IPPC AR6)
 rho_CF4=0.000099 				; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
 delta_CF4=0.0 					; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
-H0=35.0,pptv					; preindustrial concentration, pptv
+H0=35.0 					; preindustrial concentration, pptv
 molarMass=88.0043				; grams
 CF4_emissions=csv:emissions/RCP45_emissions.csv
 
