--- a/.github/workflows/leeyabot.yml
+++ b/.github/workflows/leeyabot.yml
@@ -1,5 +1,8 @@
 name: Leeyabot
-on: [pull_request]
+on:
+  pull_request:
+    branches:
+      - '**' #matches every branch
 jobs:
   run:
     runs-on: [ubuntu-latest]
